--- a/src/main/resources/main/style.css
+++ b/src/main/resources/main/style.css
@@ -45,18 +45,18 @@
 
 .orderButton
 {
-    -fx-background-color: #a2a8d3; /*kolor tła*/
+    -fx-background-color: lightgreen; /*kolor tła*/
     -fx-font-size: 20px;  /*rozmiar czcionki*/
     -fx-pref-width: 125px;
     -fx-pref-height: 50px;   /*rozmiary przycisku*/
-    -fx-text-fill: green;  /*kolor czcionki*/
+    -fx-text-fill: blue;  /*kolor czcionki*/
     -fx-text-align: center;  /*wyrównanie czcionki*/
     -fx-border-color: #385170; /* kolor obwódki */
     -fx-border-width: 3px; /*szerokosc obwódki*/
 }
 .orderButton:hover { /*  efekt podświetlenia przy najechanie :hover*/
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 5, 0.5, 0, 0); /* Efekt cienia */
-    -fx-background-color: lightblue; /*kolor tła*/
+    -fx-background-color: green; /*kolor tła*/
 }
 .basketBorder{
     -fx-border-color: #142d4c; /* kolor obwódki */
