--- a/src/main/resources/main/registerWindow.fxml
+++ b/src/main/resources/main/registerWindow.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.layout.Pane?>
 <?import java.net.URL?>
-<Pane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.users.RegisterController" xmlns="http://javafx.com/javafx/19">
+<Pane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.users.InterfaceController" xmlns="http://javafx.com/javafx/19">
     <stylesheets>
         <URL value="@style.css" />
     </stylesheets>
